# shorter-url

./: README.md  render.yaml
backend/: .gitignore  README.md  migrate_db.py  pyproject.toml  setup.sh
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  urls.py
backend/app/core/: auth.py  exceptions.py  security.py
backend/app/models/: __init__.py  analytics.py  url.py  user.py
backend/app/repositories/: __init__.py  analytics_repository.py  url_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  url.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  qr_service.py  url_service.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalyticsChart.jsx  Layout.jsx  Login.jsx  Register.jsx  URLList.jsx  URLShortener.jsx
frontend/src/contexts/: AuthContext.jsx  URLContext.jsx
frontend/src/pages/: Analytics.jsx  Home.jsx  URLs.jsx
frontend/src/services/: api.js
frontend/src/utils/: auth.js
